--- a/7 Days Mods/Bridge-API/Bridge-API.csproj
+++ b/7 Days Mods/Bridge-API/Bridge-API.csproj
@@ -11,7 +11,6 @@
     <RootNamespace>Bridge</RootNamespace>
     <AssemblyName>Bridge-API</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -33,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,7 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Bridge\Attributes\ModAttribute.cs" />
+    <Compile Include="Bridge\Attributes\PatchAttribute.cs" />
+    <Compile Include="Bridge\Attributes\PostHookAttribute.cs" />
+    <Compile Include="Bridge\Attributes\PreHookAttribute.cs" />
+    <Compile Include="Bridge\Attributes\ReplaceAttribute.cs" />
+    <Compile Include="Bridge\Methods\MethodUtils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
